fixed label text wrap

--- a/src/RetirementCalculator.scss
+++ b/src/RetirementCalculator.scss
@@ -248,6 +248,7 @@ footer {
 
       .label {
         margin-bottom: 0.5em;
+        width: 60vw;
         text-wrap: wrap;
       }
       input {
